just finish resume

--- a/src/client/components/about/about.html
+++ b/src/client/components/about/about.html
@@ -3,7 +3,7 @@
     <require from="components/about/about.css!"></require>
 
     <resume-section title="about" identifier="about">
-        <div class="about">
+        <div class="about no-print-shadow">
             <h2>Summary</h2>
             <p style="margin: 0;">${resume.about.summary}</p>
         </div>
