--- a/src/client/components/education-card/education-card.html
+++ b/src/client/components/education-card/education-card.html
@@ -1,7 +1,7 @@
 <template bindable="education">
     <require from="components/education-card/education-card.css!"></require>
 
-    <div class="education-card">
+    <div class="education-card no-print-shadow">
         <div>
             <h2><a href="${education.link}" target="_blank">${education.school}</a></h2>
             <span> - ${education.location}</span>
