--- a/src/client/components/contact/contact.html
+++ b/src/client/components/contact/contact.html
@@ -2,8 +2,8 @@
     <require from="components/resume-section/resume-section.html"></require>
     <require from="components/contact/contact.css!"></require>
 
-    <resume-section title="contact" identifier="contact">
-        <div class="contact">
+    <resume-section title="contact" identifier="contact" look="no-print">
+        <div class="contact no-print-shadow">
             <span><i class="fa fa-envelope"></i> ${resume.about.email}</span>
             <span><i class="fa fa-phone"></i> ${resume.about.phone}</span>
             <span><a href="${resume.about.github}" target="_blank"><i class="fa fa-github"></i></a></span>
