--- a/src/client/components/experience-card/experience-card.html
+++ b/src/client/components/experience-card/experience-card.html
@@ -2,7 +2,7 @@
     <require from="components/experience-card/experience-card.css!"></require>
     <require from="components/project-card/project-card"></require>
 
-    <div class="experience-card">
+    <div class="experience-card no-print-shadow">
         <div class="experience-card-header">
             <a href="${experience.link}" target="_blank"><h2>${experience.company}</h2></a>
             <span> - ${experience.location}</span>
