--- a/src/client/components/projects/projects.html
+++ b/src/client/components/projects/projects.html
@@ -4,7 +4,7 @@
     <require from="components/project-card/project-card"></require>
 
     <resume-section title="projects" identifier="projects">
-        <div class="project-section" repeat.for="p of resume.projects">
+        <div class="project-section no-print-shadow" repeat.for="p of resume.projects">
             <project-card project.bind="p"></project-card>
         </div>
     </resume-section>
