--- a/src/client/styles/site.scss
+++ b/src/client/styles/site.scss
@@ -17,6 +17,33 @@ body {
   display: none;
 }
 
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid $color-secondary;
+  border-bottom: 16px solid $color-secondary;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.centered {
+  position: fixed;
+  top: 45%;
+  left: 45%;
+}
+
 @media print
 {
   body {
