--- a/src/client/components/skill-card/skill-card.html
+++ b/src/client/components/skill-card/skill-card.html
@@ -3,7 +3,9 @@
 
     <div class="skill-card no-print">
         <div class="skill-card-img" id.bind="skill">
-            <i class="fa fa-spinner fa-spin" show.bind="!imageLoaded"></i>
+            <div style="padding-top: 0.7em;" show.bind="!imageLoaded">
+                <div class="${loaderStyle}" style="font-size: 5px; position: relative; top: 50%; left: 50%; margin-top: 0;"></div>
+            </div>
             <img show.bind="imageLoaded" style="z-index: 1000;" src.bind="imageData"/>
         </div>
         <div class="skill-card-footer">
