--- a/src/client/app/components/contact-header/contact-header.html
+++ b/src/client/app/components/contact-header/contact-header.html
@@ -3,7 +3,7 @@
 
     <div class="print-only">
         <div class="print-page-header">
-            <span class="print-header-field">${resume.about.name}</span><span class="print-header-field">${resume.about.email}</span><span class="print-header-field">${resume.about.phone}</span><img class="qr-code" src="images/resume-qr.png"/>
+            <span class="print-header-field">${resume.about.name}</span><span class="print-header-field" style="font-size: 14px;">${resume.about.email}</span><span class="print-header-field">${resume.about.phone}</span><img class="qr-code" src="images/resume-qr.png"/>
         </div>
         <hr/>
     </div>
